@@ -1,6 +1,9 @@
 <div id="hardwarecontent">
 </div>
 <div id="openzwave" style="display:none;">
+	<div class="page-header-small">
+		<h1 data-i18n="Nodes">Nodes</h1>
+	</div>
     <table class="display" id="nodestable" border="0" cellpadding="0" cellspacing="0" width="100%">
         <thead>
             <tr>
