@@ -54,6 +54,8 @@ Version 1.0.xxxx (December xxth 2013)
 - Fixed: OWFS Windows, Counter(s)
 - Implemented: Prevent multiple windows instances from running
 - Fixed: OpenZwave for windows release build
+- Fixed: Notifications for Rego6XX status (switches) were not working
+- Implemented: OpenZWave Controller node configuration (PollInterval)
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
